Replace all fpintres with $(FPINTRESUNIT) in Makefile.fpc

--- a/rtl/amiga/Makefile.fpc
+++ b/rtl/amiga/Makefile.fpc
@@ -64,7 +64,7 @@ endif
 
 ifeq ($(ARCH),powerpc)
 override LOADERS=
-RESUNIT=fpintres
+RESUNIT=$(FPINTRESUNIT)
 SYSINITUNITS=si_prc
 EXEUNITS=lineinfo exeinfo
 endif
