--- a/rtl/darwin/Makefile.fpc
+++ b/rtl/darwin/Makefile.fpc
@@ -16,7 +16,7 @@ units=$(SYSTEMUNIT) sysinit uuchar $(UNIXTYPEUNIT) $(CTYPESUNIT) objpas macpas $
       $(CHARSETUNIT) $(CPALLUNIT) $(CHARACTERUNIT) $(GETOPTSUNIT) heaptrc $(LINEINFOUNIT) $(LNFODWRFUNIT) $(LNFOGDBUNIT) \
       $(ERRORSUNIT) $(TERMIOUNIT) \
       $(SYSCONSTUNIT) $(CTHREADSUNIT) $(RTLCONSTSUNIT) $(CWSTRINGUNIT) $(BSDUNIT) $(SYSUTILSUNIT) $(FPWIDESTRINGUNIT) \
-      fpintres fpextres $(OBJCUNIT) $(OBJCBASEUNIT) $(UNIXCPUNIT) \
+      $(FPINTRESUNIT) fpextres $(OBJCUNIT) $(OBJCBASEUNIT) $(UNIXCPUNIT) \
       $(SOFTFPUUNIT) $(SFPUX80UNIT) $(UFLOATX80UNIT) $(SFPU128UNIT) $(UFLOAT128UNIT)
 implicitunits=$(EXEINFOUNIT) \
       $(CP1250UNIT) $(CP1251UNIT) $(CP1252UNIT) $(CP1253UNIT) $(CP1254UNIT) $(CP1255UNIT) $(CP1256UNIT) $(CP1257UNIT) $(CP1258UNIT) \
