--- a/rtl/aix/Makefile.fpc
+++ b/rtl/aix/Makefile.fpc
@@ -20,7 +20,7 @@ units=$(SYSTEMUNIT) uuchar unixtype ctypes strings objpas iso7185 extpas macpas 
       types sysconst \
       rtlconsts cthreads \
       dos \
-      cwstring fpwidestring fpintres $(CPU_UNITS) \
+      cwstring fpwidestring $(FPINTRESUNIT) $(CPU_UNITS) \
       softfpu sfpux80 ufloatx80 sfpu128 ufloat128
 implicitunits=cp1250 cp1251 cp1252 cp1253 cp1254 cp1255 cp1256 cp1257 cp1258 \
       cp437 cp646 cp737 cp775 cp850 cp852 cp855 cp856 cp857 cp860 cp861 cp862 \
