--- a/rtl/freebsd/Makefile.fpc
+++ b/rtl/freebsd/Makefile.fpc
@@ -19,7 +19,7 @@ units=$(SYSTEMUNIT) uuchar unixtype ctypes objpas macpas iso7185 extpas \
       errors bsd freebsd \
       console  \
       sysconst cthreads dos cwstring \
-      fpintres unixcp fpwidestring \
+      $(FPINTRESUNIT) unixcp fpwidestring \
       softfpu sfpux80 ufloatx80 sfpu128 ufloat128
 implicitunits=exeinfo \
       cp1250 cp1251 cp1252 cp1253 cp1254 cp1255 cp1256 cp1257 cp1258 \
