--- a/rtl/android/Makefile
+++ b/rtl/android/Makefile
@@ -498,6 +498,7 @@ LPC8XXUNIT=EmbeddedApi.lpc8xx
 LSTRINGSUNIT=System.LStrings
 MACOSUNIT=MacOSApi.MacOS
 MACOSTPUNIT=MacOSApi.MacOSTP
+MACPASUNIT=macpas
 MACUTILSUNIT=MacOSApi.MacUtils
 MAILBOXUNIT=EmbeddedApi.mailbox
 MATHUNIT=System.Math
@@ -745,6 +746,7 @@ LSTRINGSUNIT=lstrings
 MACOSUNIT=macos
 MACOSTPUNIT=macostp
 MACUTILSUNIT=macutils
+MACPASUNIT=macpas
 MAILBOXUNIT=mailbox
 MATHUNIT=math
 MESSAGESUNIT=messages
