--- a/rtl/macos/Makefile.fpc
+++ b/rtl/macos/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=
-units=$(SYSTEMUNIT) uuchar $(STRINGSUNIT)  macpas objpas iso7185 $(MACOSTPUNIT) $(MACUTILSUNIT) extpas \
+units=$(SYSTEMUNIT) uuchar $(STRINGSUNIT)  $(MACPASUNIT) objpas iso7185 $(MACOSTPUNIT) $(MACUTILSUNIT) extpas \
       $(HEAPTRCUNIT) $(GETOPTSUNIT) \
       $(UNIXUTILUNIT)  $(DOSUNIT)  $(CMEMUNIT) $(CHARSETUNIT) $(CPALLUNIT)  $(CTYPESUNIT) $(SYSCONSTUNIT) \
       $(SORTBASEUNIT)  $(SYSUTILSUNIT) $(CLASSESUNIT) $(TYPINFOUNIT) $(FGLUNIT) $(TYPESUNIT) \
