--- a/rtl/aix/Makefile.fpc
+++ b/rtl/aix/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=
-units=$(SYSTEMUNIT) uuchar unixtype ctypes strings objpas iso7185 extpas macpas \
+units=$(SYSTEMUNIT) uuchar unixtype ctypes strings objpas iso7185 extpas $(MACPASUNIT) \
       heaptrc \
       baseunix unixutil \
       termio unix initc cmem \
