--- a/rtl/palmos/Makefile.fpc
+++ b/rtl/palmos/Makefile.fpc
@@ -7,12 +7,12 @@ main=rtl
 
 [target]
 loaders= prt0
-units=$(SYSTEMUNIT) si_prc uuchar objpas iso7185 strings \
+units=$(SYSTEMUNIT) si_prc uuchar objpas $(ISO7185UNIT) strings \
        ctypes \
        charset cpall \
        sysconst \
        systraps pilot
-#units=$(SYSTEMUNIT) uuchar ctypes objpas $(MACPASUNIT) iso7185 extpas strings \
+#units=$(SYSTEMUNIT) uuchar ctypes objpas $(MACPASUNIT) $(ISO7185UNIT) extpas strings \
 #      lnfodwrf lineinfo heaptrc \
 #      windows messages dynlibs \
 #      dos objects \
@@ -119,9 +119,6 @@ strings$(PPUEXT) : $(INC)/strings.pp $(INC)/stringsi.inc\
 
 cpall$(PPUEXT): $(RTL)/charmaps/cpall.pas system$(PPUEXT) charset$(PPUEXT)
         $(COMPILER) -Fu$(INC) -Fi$(RTL)/charmaps $(RTL)/charmaps/cpall.pas
-
-iso7185$(PPUEXT) : $(INC)/iso7185.pp $(SYSTEMUNIT)$(PPUEXT)
-        $(COMPILER) $(INC)/iso7185.pp
 
 #extpas$(PPUEXT) : $(INC)/extpas.pp dos$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
 #        $(COMPILER) $(INC)/extpas.pp
