--- a/rtl/freertos/Makefile.fpc
+++ b/rtl/freertos/Makefile.fpc
@@ -12,8 +12,8 @@ loaders=$(LOADERS)
 # not all targets include enough features to build all units so
 # the common units which are not compiled for all CPUs are stored in
 # CPU_SPECIFIC_COMMON_UNITS
-units=$(SYSTEMUNIT) $(CPU_UNITS) uuchar objpas iso7185 extpas heapmgr consoleio  $(CPU_SPECIFIC_COMMON_UNITS) \
-# $(MACPASUNIT) iso7185 strings
+units=$(SYSTEMUNIT) $(CPU_UNITS) uuchar objpas $(ISO7185UNIT) extpas heapmgr consoleio  $(CPU_SPECIFIC_COMMON_UNITS) \
+# $(MACPASUNIT) $(ISO7185UNIT) strings
        $(STRINGSUNIT) \
        $(SORTBASEUNIT) \
        $(DOSUNIT) \
