--- a/rtl/netwlibc/Makefile.fpc
+++ b/rtl/netwlibc/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=nwplibc nwl_main nwl_dlle
-units=$(SYSTEMUNIT) uuchar objpas $(MACPASUNIT) iso7185 extpas strings \
+units=$(SYSTEMUNIT) uuchar objpas $(MACPASUNIT) $(ISO7185UNIT) extpas strings \
       lineinfo lnfodwrf  heaptrc \
       nwsnut libc dos sysconst \
       initc sysutils types typinfo sortbase fgl classes \
