--- a/rtl/symbian/Makefile.fpc
+++ b/rtl/symbian/Makefile.fpc
@@ -6,9 +6,9 @@
 main=rtl
 
 [target]
-# $(MACPASUNIT) and iso7185 units rely on sysutils unit, not yet handled here
+# $(MACPASUNIT) and $(ISO7185UNIT) units rely on sysutils unit, not yet handled here
 # extpas unit relies on dos unit, not yet handled
-units=$(SYSTEMUNIT) iso7185 extpas uuchar objpas $(MACPASUNIT) \
+units=$(SYSTEMUNIT) $(ISO7185UNIT) extpas uuchar objpas $(MACPASUNIT) \
       $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(RTLCONSTSUNIT) \
       $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) $(FGLUNIT) $(CPU_UNITS) \
       $(DOSUNIT) $(TYPEINFOUNIT) $(TYPESUNIT) $(SORTBASEUNIT) $(CLASSESUNIT) buildrtl
