--- a/rtl/win16/Makefile.fpc
+++ b/rtl/win16/Makefile.fpc
@@ -5,7 +5,7 @@
 main=rtl
 [target]
 loaders=prt0s prt0m prt0c prt0l prt0h 
-units=system uuchar objpas strings iso7185 extpas dos \
+units=system uuchar objpas strings $(ISO7185UNIT) extpas dos \
       wintypes winprocs win31 ports dynlibs sortbase \
       sysconst rtlconsts sysutils math types typinfo fgl \
       classes charset cpu getopts cpall \
@@ -99,10 +99,6 @@ strings$(PPUEXT) : $(INC)/strings.pp $(INC)/stringsi.inc \
                    $(INC)/genstr.inc $(INC)/genstrs.inc \
                    system$(PPUEXT)
 	$(COMPILER) $(INC)/strings.pp
-	$(EXECPPAS)
-
-iso7185$(PPUEXT) : $(INC)/iso7185.pp system$(PPUEXT)
-        $(COMPILER) $(INC)/iso7185.pp
 	$(EXECPPAS)
 
 extpas$(PPUEXT) : $(INC)/extpas.pp dos$(PPUEXT) system$(PPUEXT)
