--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -695,7 +695,7 @@ macpas$(PPUEXT) : $(MACPAS_DEPS)
 
 # iso7185
 
-ISO7185_DEPS= $(INC)/$(ISO7185UNIT).pp \
+ISO7185_DEPS= $(INC)/iso7185.pp \
               $(SYSTEMUNIT)$(PPUEXT) \
               $(ISO7185_DEPS_OS) $(ISO7185_DEPS_CPU)
 
