--- a/rtl/netbsd/Makefile.fpc
+++ b/rtl/netbsd/Makefile.fpc
@@ -10,7 +10,7 @@ fpcpackage=y
 
 [target]
 loaders=prt0 cprt0 dllprt0
-units=$(SYSTEMUNIT) uuchar unixtype ctypes objpas $(MACPASUNIT) $(ISO7185UNIT) extpas \
+units=$(SYSTEMUNIT) uuchar unixtype ctypes objpas $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) \
       strings syscall sysctl  baseunix unixutil character \
       unix rtlconsts initc cmem \
       dl termio \
@@ -215,13 +215,6 @@ types$(PPUEXT) : $(OBJPASDIR)/types.pp objpas$(PPUEXT) math$(PPUEXT) $(SYSTEMUNI
 # let it depend on buildcollations to prevent simultaneous building of unicodedata
 character$(PPUEXT): sysutils$(PPUEXT) $(OBJPASDIR)/character.pas objpas$(PPUEXT) rtlconsts$(PPUEXT) 
         $(COMPILER) $(OBJPASDIR)/character.pas
-
-#
-# Extended Pascal Model
-#
-
-extpas$(PPUEXT) : $(INC)/extpas.pp dos$(PPUEXT)
-        $(COMPILER) $(INC)/extpas.pp $(REDIR)
 
 #
 # Other system-independent RTL Units
