--- a/rtl/symbian/Makefile.fpc
+++ b/rtl/symbian/Makefile.fpc
@@ -7,8 +7,8 @@ main=rtl
 
 [target]
 # $(MACPASUNIT) and $(ISO7185UNIT) units rely on sysutils unit, not yet handled here
-# extpas unit relies on dos unit, not yet handled
-units=$(SYSTEMUNIT) $(ISO7185UNIT) extpas uuchar objpas $(MACPASUNIT) \
+# $(EXTPASUNIT) unit relies on dos unit, not yet handled
+units=$(SYSTEMUNIT) $(ISO7185UNIT) $(EXTPASUNIT) uuchar objpas $(MACPASUNIT) \
       $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(RTLCONSTSUNIT) \
       $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) $(FGLUNIT) $(CPU_UNITS) \
       $(DOSUNIT) $(TYPEINFOUNIT) $(TYPESUNIT) $(SORTBASEUNIT) $(CLASSESUNIT) buildrtl
