--- a/rtl/msxdos/Makefile.fpc
+++ b/rtl/msxdos/Makefile.fpc
@@ -8,7 +8,7 @@ main=rtl
 units=system si_prc uuchar objpas $(ISO7185UNIT) strings charset cpall \
       getopts exeinfo heaptrc
 #uuchar objpas strings dos heaptrc lnfodwrf sysconst sysutils \
-#      math $(MACPASUNIT) $(ISO7185UNIT) extpas rtlconsts typinfo cpu types \
+#      math $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) rtlconsts typinfo cpu types \
 #      getopts sortbase fgl classes \
 #      msmouse ports  \
 #      charset cpall ctypes \
@@ -94,10 +94,6 @@ strings$(PPUEXT) : $(INC)/strings.pp $(INC)/stringsi.inc \
                    system$(PPUEXT)
 	$(COMPILER) $(INC)/strings.pp
 	$(EXECPPAS)
-
-extpas$(PPUEXT) : $(INC)/extpas.pp dos$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
-        $(COMPILER) $(INC)/extpas.pp
-        $(EXECPPAS)
 
 #
 # System Dependent Units
